--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="/public/piwoicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Piwo Helados</title>
+    <meta
+      name="description"
+      content="Helados 100% artesanales. Cookies, tortas, bocatas y más. Jugos naturales #SugarFree y café colombiano."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
