--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Hotjar Tracking Code for Piwo Helado -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 6400939, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
   </head>
   <body style="margin: 0; padding: 0">
     <div id="root"></div>
